--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="banner">
                     <h1>Web Developer & Front End Designer</h1>
-                    <p>Marcos J. Silva</p>
+                    <p>Marcos J. Lira</p>
                     <button>Saiba mais</button>
                 </div>
             </header>
